# honours-project

./: CMakeLists.txt  alpha_plot.py  beam_plot_3d.py  calcXiSquareGH_G1G2.m  combined_probabilities.py  confocal_scan.m  correlation_plot.py  emitter_positions.csv  eroded_detail.ipe  eroded_detail.ipe.autosave.ipe  fastGH.m  g1_g2_confocal_scans.py  gauss_hermite.py  gauss_laguerre.py  gh_tem_localization.m  hermite_example.m  hermite_example.m~  hermite_polynomial.py  hermiteh.m  isolines.py  isosurface.py  k_means.csv  multicoreG1G2_SSE.m  multicorePredictG1G2.m  multicore_exposure_time.m  multicore_localization.m  multicore_localization.py  multicore_shift_emitters.m  notes  off_axis_illumination.py  off_axis_localization.py  optimization_setup.ipe.autosave.ipe  predictGH_G1G2.m  qclm.py  rectangular_tem_localization.py  rectangular_tem_only.py  rectangular_tem_polarization.py  skew_tem_localization.py  stuff.ipe  tem_mode_pattern_generation.py  (+15 more)
c-attempt/: .gitignore  CMakeLists.txt  avg_finite_time  convex_hull.h  fast_gp.h  finite_time  multicore_experiments.h  multicore_localization  multicore_monte_carlo  qclm.py  queue  queue_out.txt  render_tem  render_tem.py  render_tem_gh.cpp  tem_experiments.h  tem_localization  tem_localization_2d  tem_localization_2d.cpp  tem_render_3d  utils.h  xy_form_tem
c-attempt/.VSCodeCounter/2023-10-23_22-56-29/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
c-attempt/.VSCodeCounter/2023-10-23_22-56-49/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
c-attempt/.VSCodeCounter/2023-10-25_21-19-24/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
c-attempt/avg-finite-time/: emitter_xy.csv  main.cpp  main_config.h  main_simple.cpp
c-attempt/avg-finite-time/data/: iter_0_emitter_guesses.csv  iter_0_x1s.csv  iter_0_x1s_convex_hull.csv  iter_0_x2s.csv  iter_0_x2s_convex_hull.csv  iter_10_emitter_guesses.csv  iter_10_x1s.csv  iter_10_x1s_convex_hull.csv  iter_10_x2s.csv  iter_10_x2s_convex_hull.csv  iter_11_emitter_guesses.csv  iter_11_x1s.csv  iter_11_x1s_convex_hull.csv  iter_11_x2s.csv  iter_11_x2s_convex_hull.csv  iter_12_emitter_guesses.csv  iter_12_x1s.csv  iter_12_x1s_convex_hull.csv  iter_12_x2s.csv  iter_12_x2s_convex_hull.csv  iter_13_emitter_guesses.csv  iter_13_x1s.csv  iter_13_x1s_convex_hull.csv  iter_13_x2s.csv  iter_13_x2s_convex_hull.csv  iter_14_emitter_guesses.csv  iter_14_x1s.csv  iter_14_x1s_convex_hull.csv  iter_14_x2s.csv  iter_14_x2s_convex_hull.csv  iter_15_emitter_guesses.csv  iter_15_x1s.csv  iter_15_x1s_convex_hull.csv  iter_15_x2s.csv  iter_15_x2s_convex_hull.csv  iter_16_emitter_guesses.csv  iter_16_x1s.csv  iter_16_x1s_convex_hull.csv  iter_16_x2s.csv  iter_16_x2s_convex_hull.csv  (+85 more)
c-attempt/figure-generation/: alpha_plot.py  confocal_scan.py  correlation_plot.py  g2_ring_comparison.py  gouy_phase.py  hexagonal_cores.py  isosurface.py  psf.py  resolution_degradation.py  worboy_scan.py
c-attempt/finite-time/: center_g2_1000e_500t_results.txt  core_locations.csv  diminishing_returns_results.txt  emitter_guesses.csv  emitter_positions.csv  emitter_xy.csv  g1_g2_measurements.csv  g2_capable_indexes.csv  main.cpp  main_config.h  main_noise_response.cpp  main_simple.cpp  outer_ring_1000e_500t_results.txt  plot.py  plot_noise_response.py  plot_simple.py  triangular_symmety_1000e_500t_results.txt  triangular_symmety_broken_1000e_500t_results.txt  w_eff_bar.csv  x1s.csv  x1s_convex_hull.csv  x2s.csv  x2s_convex_hull.csv
c-attempt/multicore-localization/: emitter_xy.csv  g1_g2_measurements.csv  main.cpp  plot.py  x1s.csv  x1s_convex_hull.csv  x2s.csv  x2s_convex_hull.csv
c-attempt/multicore-localization-inf-time/: core_locations_1_0_1_3_5_results.txt  core_locations_1_1_3_5_results.txt  core_locations_2_0_1_3_5_results.txt  core_locations_2_1_3_5_results.txt  emitter_parameter_log.csv  emitter_xy.csv  emitter_xys.csv  g1_g2_measurements.csv  g2_capable_indexes.csv  main.cpp  main_noise_response.cpp  main_simple.cpp  plot_noise_response.py  plot_simple.py  w_eff_bar.csv  w_eff_bar_worboy.csv  x1s.csv  x1s_convex_hull.csv  x2s.csv  x2s_convex_hull.csv
c-attempt/multicore-monte-carlo/: emitter_xy.csv  g1_g2_measurements.csv  main.cpp  plot_debug.py  x1s.csv  x1s_convex_hull.csv  x2s.csv  x2s_convex_hull.csv
c-attempt/queue-inf-time/: main.cpp  main_config.h  noiseResponse.cpp  plot_noise_response.py
c-attempt/tem-localization/: beam_centers.csv  g1_g2_measurements.csv  main.cpp  plot_simple.py  x1s.csv  x1s_convex_hull.csv  x2s.csv  x2s_convex_hull.csv
c-attempt/tem-render/: force_isos.py  meta.out  render_tem.py  render_tem_gh.cpp  render_tem_gl.cpp  tem_render_3d.cpp
c-attempt/xy-form-tem/: beam_centers.csv  emitter_xy.csv  force_isos.py  g1_g2_measurements.csv  main.cpp  meta.out
data/: tem_modes.cu
old/: hbt.py  (+10 more)
(+581 files in other folders)
